feat: 팀 프로젝트와 개인 마이페이지 자료 제출을 완전히 분리, 팀 전용 공유 자료 트랙 신설
- 팀에 속하면 개인 제출이 팀원 것으로 덮어써지던 자동 동기화(syncToTeammates,
  syncExistingSubmissionsToNewMember)를 제거 — 팀 소속 여부와 무관하게 개인 마이페이지
  제출은 항상 독립적으로 유지됨
- 팀 프로젝트 탭에 팀 공유 자료 신설: 팀원 누구나 발표자료/PDF/기타 업로드 가능,
  3월/9월은 팀 전용 계획서 작성 페이지(로드맵/역할/링크 구조, 개인용과 동일한 UX)
- 관리자 제출 현황: 팀 자료 또는 개인 자료 중 하나만 있어도 제출로 인정, 둘 다 있으면
  둘 다 노출. ZIP 다운로드도 개인(개인)/팀(팀 공유자료) 폴더로 분리해서 모두 포함
- 회원 상세 페이지(커뮤니티에서 진입)에 이번 학기 팀 프로젝트 소속 정보를 개인 정보와
  별개로 추가 표시